# SVTSW

./: .gitignore  .gitmodules  README.md
Configurations/DBAgent/: ER1_Global_WaferMap_Format.json  ER1_mother.json
Configurations/WaferTypeMappings/: ER1GlobalWaferMap.json  ER1GlobalWaferMap_ref.json  ER1WaferMap_v0.json  ER1_mother.json  GlobaltoSentioMap.py
DB/: README.md  pkg_requirements
DB/db-agent/: CMakeLists.txt
DB/db-agent/include/Database/: databaseinterface.h
DB/db-agent/include/DbAgent/: svtdb_agent.h  svtdb_service.h
DB/db-agent/include/SVTDb/: sqlmapi.h  svtdb_if.h
DB/db-agent/include/SVTUtilities/: ItsGlobalTimer.h  ItsTimer.h  ItsUtility.h  SvtLogger.h
DB/db-agent/src/: SVT_db_agent.cpp  test_db_if.cpp
DB/db-agent/src/DbAgent/: svtdb_agent.cpp  svtdb_service.cpp
DB/db-agent/src/SVTDb/: sqlmapi.cpp  svtdb_if.cpp
DB/db-agent/src/SVTUtilities/: ItsBitsManager.cpp  ItsTimer.cpp  SvtLogger.cpp
DB/epic-db-agent/: .gitignore  CMakeLists.txt  EpicDbAgent.conf  EpicDbAgent.service  EpicDbAgent.sh
DB/epic-db-agent/cmake/: version.cmake
DB/epic-db-agent/include/Database/: databaseinterface.h
DB/epic-db-agent/include/EpicDb/: EpicDbInterface.h  sqlmapi.h
DB/epic-db-agent/include/EpicDbAgentService/: EpicDbAgentCb.h  EpicDbAgentConsumer.h  EpicDbAgentProducer.h  EpicDbAgentRequest.h  EpicDbAgentService.h
DB/epic-db-agent/include/EpicUtilities/: EpicLogger.h  EpicUtilities.h
DB/epic-db-agent/src/: db_IF_test.cpp  epic_db_agent.cpp  epic_db_agent_test.cpp
DB/epic-db-agent/src/Database/: databaseinterface.cpp
DB/epic-db-agent/src/EpicDb/: EpicDbInterface.cpp  sqlmapi.cpp
DB/epic-db-agent/src/EpicDbAgentService/: EpicDbAgentConsumer.cpp  EpicDbAgentProducer.cpp  EpicDbAgentService.cpp
DB/epic-db-agent/src/EpicUtilities/: EpicLogger.cpp  EpicUtilities.cpp
DB/py/: createSchema.py  make-tables.py  showAllEnumValues.py  svtconfigdbinteractions.py  testdb.py
DB/sh/: README.md  open_pqsl_db.sh  psql.sh
DB/sql/: SVT-database-rename.sql  SVT-drop-tables.sql  SVT-pCards-create.sql  SVT-tables-alters.sql  SVT-tables-create.sql  SVT-tables-drop.sql  SVT-tables-update.sql  SVT-tables.sql  SVT-types-create.sql  SVT-types.sql  SVT_DB_Tables_SourceOfTruth.sql  make-tables-test.sql  make-tables.sql  show-all-enum-values.sql
DB/svt-db-agent/: .gitignore  CMakeLists.txt  SvtDbAgent-dev.conf  SvtDbAgent.conf  SvtDbAgent.service  SvtDbAgent.sh  compile.sh
DB/svt-db-agent/include/Database/: databaseinterface.h  multitype.h
DB/svt-db-agent/include/SVTDb/: SvtDbInterface.h  sqlmapi.h
DB/svt-db-agent/include/SVTDbAgentDto/: SvtDbAsicDto.h  SvtDbBaseDto.h  SvtDbEnumDto.h  SvtDbProbeCardDto.h  SvtDbWPMachineDto.h  SvtDbWPProjectDto.h  SvtDbWaferDto.h  SvtDbWaferTypeDto.h
DB/svt-db-agent/include/SVTDbAgentService/: SvtDbAgentCb.h  SvtDbAgentConsumer.h  SvtDbAgentEnum.h  SvtDbAgentMessage.h  SvtDbAgentProducer.h  SvtDbAgentRequest.h  SvtDbAgentService.h
DB/svt-db-agent/include/SVTUtilities/: SvtLogger.h  SvtUtilities.h
DB/svt-db-agent/src/: db_IF_test.cpp  svt_db_agent.cpp
DB/svt-db-agent/src/Database/: databaseinterface.cpp  multitype.cpp
DB/svt-db-agent/src/SVTDb/: SvtDbInterface.cpp  sqlmapi.cpp
DB/svt-db-agent/src/SVTDbAgentDto/: SvtDbAsicDto.cpp  SvtDbBaseDto.cpp  SvtDbEnumDto.cpp  SvtDbProbeCardDto.cpp  SvtDbWPMachineDto.cpp  SvtDbWPProjectDto.cpp  SvtDbWaferDto.cpp  SvtDbWaferTypeDto.cpp
DB/svt-db-agent/src/SVTDbAgentService/: SvtDbAgentConsumer.cpp  SvtDbAgentEnum.cpp  SvtDbAgentProducer.cpp  SvtDbAgentRequest.cpp  SvtDbAgentService.cpp
DB/svt-db-agent/src/SVTUtilities/: SvtLogger.cpp  SvtUtilities.cpp
DB/svt_db/: CMakeLists.txt
DB/svt_db/include/Database/: databaseinterface.h  multitype.h
DB/svt_db/include/SVTDb/: sqlmapi.h  svtdb_if.h
DB/svt_db/include/SVTUtilities/: ItsBitsManager.h  itsThread.h
DB/svt_db/include/SVTUtilities/toBeProc/: timer.h
DB/svt_db/src/: SVT_db.cpp  SVT_db_agent.cpp
DB/svt_db/src/Database/: databaseinterface.cpp  multitype.cpp
DB/svt_db/src/SVTDb/: sqlmapi.cpp  svtdb_if.cpp
DB/svt_db/src/SVTUtilities/: ItsGlobalTimer.cpp  ItsUtility.cpp  itsThread.cpp
Dev/: docker-compose.yml
Dev/Kafka/: README.md  docker-compose-dev.yml  docker-compose-kafka-ui.yml  docker-compose.yml
Documentation/DB/DBTables/: SVT_DB_Tables_SLDO_test.txt  SVT_DB_Tables_SourceOfTruth.sql  SVT_DB_Tables_SourceOfTruth.txt  SVT_DB_Tables_SourceOfTruth_v1.txt  SVT_DB_tables_desired.txt  UML_DataBase_instructions.txt
Documentation/Kafka/: README.md  SvtKafkaConventions.md  svt.db-agent.kafka(ancASIC).yaml  svt.db-agent.kafka.ancASIC.yaml  svt.db-agent.kafka.yaml
Documentation/WaferMap/: ER1MotherFormat.txt  GlobalWaferMapFormat.txt
Utilities/: GlobaltoSentioMap.py
